[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Button/Book/Book.png" type="Texture" id=1]
[ext_resource path="res://src/Character/Book.gd" type="Script" id=2]
[ext_resource path="res://assets/Button/Book/Book_Background.png" type="Texture" id=3]
[ext_resource path="res://assets/Button/Book/Book_close.png" type="Texture" id=4]
[ext_resource path="res://assets/Button/Movement/right.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Kaisei_HarunoUmi/KaiseiHarunoUmi-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/Button/Book/slot.png" type="Texture" id=7]
[ext_resource path="res://src/Character/slot.gd" type="Script" id=8]
[ext_resource path="res://src/Character/YSort.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 64 )

[node name="Book" type="Node2D"]
script = ExtResource( 2 )

[node name="Open_book" type="TouchScreenButton" parent="."]
position = Vector2( 960, 0 )
normal = ExtResource( 4 )

[node name="Paused_Panel" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 100

[node name="Control" type="Control" parent="Paused_Panel"]
visible = false
margin_left = 2.66968
margin_top = 4.00452
margin_right = 42.6697
margin_bottom = 44.0045
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Paused_Panel/Control"]
position = Vector2( 517.33, 307.995 )
texture = ExtResource( 3 )

[node name="countdown" type="Timer" parent="Paused_Panel/Control"]
wait_time = 10.0

[node name="Close_Book" type="TouchScreenButton" parent="Paused_Panel/Control"]
position = Vector2( 957.33, -4.00452 )
normal = ExtResource( 1 )

[node name="Typing_area" type="LineEdit" parent="Paused_Panel/Control"]
margin_left = 389.33
margin_top = 259.995
margin_right = 656.33
margin_bottom = 323.995
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enter" type="Button" parent="Paused_Panel/Control/Typing_area"]
margin_left = 96.0
margin_top = 96.0
margin_right = 165.0
margin_bottom = 129.0
text = "ENTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YSort" type="YSort" parent="Paused_Panel/Control"]
visible = false
script = ExtResource( 9 )

[node name="GridContainer" type="GridContainer" parent="Paused_Panel/Control/YSort"]
margin_left = 61.3303
margin_top = 507.995
margin_right = 1093.33
margin_bottom = 571.995
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )
custom_constants/vseparation = 0
custom_constants/hseparation = 64
columns = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot1" type="Panel" parent="Paused_Panel/Control/YSort/GridContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 8 )

[node name="slot2" type="Panel" parent="Paused_Panel/Control/YSort/GridContainer"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 8 )

[node name="slot3" type="Panel" parent="Paused_Panel/Control/YSort/GridContainer"]
margin_left = 256.0
margin_right = 320.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 8 )

[node name="slot4" type="Panel" parent="Paused_Panel/Control/YSort/GridContainer"]
margin_left = 384.0
margin_right = 448.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 8 )

[node name="slot5" type="Panel" parent="Paused_Panel/Control/YSort/GridContainer"]
margin_left = 512.0
margin_right = 576.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 8 )

[node name="slot6" type="Panel" parent="Paused_Panel/Control/YSort/GridContainer"]
margin_left = 640.0
margin_right = 704.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 8 )

[node name="slot7" type="Panel" parent="Paused_Panel/Control/YSort/GridContainer"]
margin_left = 768.0
margin_right = 832.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 8 )

[node name="slot8" type="Panel" parent="Paused_Panel/Control/YSort/GridContainer"]
margin_left = 896.0
margin_right = 960.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 8 )

[node name="Container" type="YSort" parent="Paused_Panel/Control/YSort"]
position = Vector2( 61.3303, 507.995 )

[node name="Correct" type="CanvasLayer" parent="Paused_Panel"]

[node name="Correctword" type="Control" parent="Paused_Panel/Correct"]
visible = false
margin_left = 344.0
margin_top = 208.0
margin_right = 744.0
margin_bottom = 408.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Paused_Panel/Correct/Correctword"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CWord" type="Label" parent="Paused_Panel/Correct/Correctword/Panel"]
margin_left = 136.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 56.0
text = "Word"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cmean" type="Label" parent="Paused_Panel/Correct/Correctword/Panel"]
margin_left = 24.0
margin_top = 56.0
margin_right = 384.0
margin_bottom = 176.0
text = "Meaning"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="Paused_Panel/Correct/Correctword/Panel"]
position = Vector2( 328, 128 )
normal = ExtResource( 5 )

[node name="Wrong" type="CanvasLayer" parent="Paused_Panel"]

[node name="Wrongword" type="Control" parent="Paused_Panel/Wrong"]
visible = false
margin_left = 344.0
margin_top = 208.0
margin_right = 744.0
margin_bottom = 408.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Paused_Panel/Wrong/Wrongword"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wWord" type="Label" parent="Paused_Panel/Wrong/Wrongword/Panel"]
margin_left = 136.0
margin_top = 16.0
margin_right = 248.0
margin_bottom = 64.0
text = "Word"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="meaning" type="Label" parent="Paused_Panel/Wrong/Wrongword/Panel"]
margin_left = 112.0
margin_top = 88.0
margin_right = 274.0
margin_bottom = 136.0
text = "No existing Word in CS/IT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wr" type="TouchScreenButton" parent="Paused_Panel/Wrong/Wrongword/Panel"]
position = Vector2( 328, 128 )
normal = ExtResource( 5 )

[node name="WordTimer" type="Timer" parent="Paused_Panel"]
wait_time = 10.0

[node name="CD_Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="pressed" from="Open_book" to="." method="_on_Open_book_pressed"]
[connection signal="timeout" from="Paused_Panel/Control/countdown" to="." method="_on_countdown_timeout"]
[connection signal="pressed" from="Paused_Panel/Control/Close_Book" to="." method="_on_Close_Book_pressed"]
[connection signal="pressed" from="Paused_Panel/Control/Typing_area/Enter" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Paused_Panel/Correct/Correctword/Panel/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="Paused_Panel/Wrong/Wrongword/Panel/Wr" to="." method="_on_Wr_pressed"]
[connection signal="timeout" from="Paused_Panel/WordTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CD_Timer" to="." method="_on_CD_Timer_timeout"]
